--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -29,7 +29,7 @@ body {
     padding: 0;
     margin: 0;
     list-style: none;
-    flex-wrap: nowrap; 
+    flex-wrap: wrap; 
 }
   
 .sub-header ul.info li {
@@ -38,7 +38,7 @@ body {
     font-size: 14px;
     color: #7a7a7a;
     margin-right: 25px;
-    white-space: nowrap; 
+    white-space: wrap; 
 }
 .sub-header ul.info li a{
     text-transform: capitalize;
@@ -185,19 +185,117 @@ body {
 .hamburger svg {
     font-size: 1.5rem;
 }
-@media (max-width: 768px) {
-    /* .container {
+@media screen and (max-width: 767px) {
+    .container {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+    .sub-header {
+        background-color:#f7f7f7;
+        flex-direction: column;
+    }
+    .sub-header ul.info, .sub-header ul.social-links {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .sub-header ul.info li, .sub-header ul.social-links li {
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
+    .sub-header ul.info li.address {
+        display: none;
+    }
+    .sub-header {
+        display: none;
+    }
+    .navbar {
+        /* delete flex-direction and align-items later for logo to align at top */
+        /* flex-direction: column;
+        align-items: flex-start; */
+        position: relative;
+        padding: 10px 15px;
+        max-width: 1200px;
+        height: 130px;
+    }
+
+    .navbar-logo {
+        text-align: left; 
+        margin-top: 20px;
+        align-items: flex-start;
+    }
+
+    .navbar-logo img {
+        height: 240px; 
+        width: auto; 
+    }
+
+    .navbar-links {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        background-color: #fff;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        padding-left: 30px;
+        z-index: 999;
+        align-items: flex-start; 
+    }
+
+    .navbar-links.open {
+        display: flex;
+    }
+
+    .navbar-links ul {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .navbar-links ul li {
+        width: 100%; 
+    }
+
+    .navbar-links ul li a {
+        display: block;
+        padding: 20px;
+        text-align: left; 
+        width: 100%; 
+    }
+
+    .navbar-links ul li a.bn59 {
+        width: 100px; 
+        height: 43px; 
+        margin: 10px ;
+        display: flex;
+    }
+
+    .hamburger {
+        display: block;
+        position: absolute;
+        right: 25px;
+        top: 40px;
+        padding: 10px;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+    .container {
         flex-direction: column;
         align-items: flex-start;
     }
-    
-    .sub-header ul.info {
-        margin-bottom: 10px;
-    } */
     .sub-header {
-        display: none; 
+        background-color:#f7f7f7;
     }
-
+    .sub-header ul.info {
+        margin-bottom: 5px;
+    } 
+    .sub-header ul.info li {
+        margin-right: 5px;
+        margin-left: 5px;
+    }
+  
     .navbar {
         /* delete flex-direction and align-items later for logo to align at top */
         /* flex-direction: column;
