--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -105,6 +105,7 @@ body {
     max-width: 1200px;
     margin-bottom: 0.5rem;
     height: 100px;
+    margin-top: 20px;
 }
 
 .navbar-logo {
@@ -219,6 +220,7 @@ body {
         padding: 10px 15px;
         max-width: 1200px;
         height: 130px;
+        margin-top: 0px;
     }
 
     .navbar-logo {
@@ -306,6 +308,7 @@ body {
         padding: 10px 15px;
         max-width: 1200px;
         height: 130px;
+        margin-top: 0px;
     }
 
     .navbar-logo {
