--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -258,5 +258,15 @@ textarea:focus::placeholder {
         display: flex;
         flex-direction: column-reverse; 
     }
+    .information {
+        margin-top: 25px;
+        background-color: #ffffff;
+        border-radius: 10px;
+        padding: 30px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        display: flex;
+        align-items: center;
+        width: 100%;
+    }
 
 }
