--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -222,6 +222,67 @@ textarea:focus::placeholder {
     border-radius: 15px;
 }
 
+/* styles for the FAQ section */
+.faq-section {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 40px;
+}
+  
+.faq-list {
+    margin-top: 20px;
+}
+  
+.faq-item {
+    margin-bottom: 20px;
+    padding: 20px;
+    border-radius: 5px;
+    background-color: #ffffff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+  
+.faq-item h3 {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 20.5px;
+    margin-bottom: 10px;
+    cursor: pointer;
+    text-align: left;
+    font-family: "Poppins Semibold";
+    color: #232323;
+}
+  
+.questions{
+    font-family: "Poppins Bold";
+    font-size: 25px;
+    text-align: center;
+}
+  
+.freq-asked{
+    font-size: 17px;
+    font-family: "Poppins Bold";
+}
+  /* .faq-item h3:hover {
+    background-color: #f0f0f0;
+  } */
+  
+  /* .faq-item:hover {
+    transform: scale(1.1);
+  } */
+  
+.faq-item p {
+    font-size: 16px;
+    display: none;
+    text-align: left;
+    font-family: "Work Sans";
+}
+  
+.faq-item.show-answer p {
+    display: block;
+  
+}
+
 @media screen and (max-width: 767px) {
     .content-container {
         display: flex;
