--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -368,7 +368,22 @@ ol, ul {
     padding-left: 30px;
     padding-bottom: 20px;
 }
-
+.handbook {
+    display: block;
+    padding: 10px 10px;
+    font: normal 17px / 25px 'Montserrat_reg';
+    color: #fff;
+    background-color: #11BDD0;
+    text-decoration: none;
+    border-radius: 10px;
+    box-sizing: border-box;
+    text-align: center;
+    width: 50%;
+}
+.handbook:hover {
+    background-color: #0ea1b3;
+    cursor: pointer;
+}
 /* services */
 .service-section {
     padding-top: 90px;
@@ -925,7 +940,7 @@ textarea:focus::placeholder {
     }
     .rightSide ul li .download-link {
         width: 60%; 
-        margin: 16px 0; 
+        margin: 10px 0; 
         text-align: center; 
         font: normal 17px / 25px 'Montserrat_reg';
     }
@@ -986,7 +1001,11 @@ textarea:focus::placeholder {
         font-size: 16px;
         padding: 15px 0 0px 30px;
     }
-
+    .handbook {
+        width: 60%;  
+        text-align: center; 
+        font: normal 17px / 25px 'Montserrat_reg';
+    }
     /* services  */
     .heading {
         text-align: center;
@@ -1244,7 +1263,7 @@ textarea:focus::placeholder {
     }
     .rightSide ul li .download-link {
         width: 30%; 
-        margin: 16px 0; 
+        margin: 10px 0; 
         text-align: center; 
         font: normal 19px / 25px 'Montserrat_reg';
     }
@@ -1303,6 +1322,11 @@ textarea:focus::placeholder {
         text-transform: uppercase;
         padding-left: 30px;
         padding-bottom: 20px;
+    }
+    .handbook {
+        width: 30%; 
+        text-align: center; 
+        font: normal 19px / 25px 'Montserrat_reg';
     }
     /* services  */
     .heading {
